@@ -18,7 +18,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -131,11 +130,10 @@ public interface CommonInterface {
 
     default List<CommonInterface> getActiveChildren() {
         Thing thing = getThing();
-        if (thing instanceof Bridge) {
-            return ((Bridge) thing).getThings().stream().filter(Thing::isEnabled)
+        if (thing instanceof Bridge bridge) {
+            return bridge.getThings().stream().filter(Thing::isEnabled)
                     .filter(th -> th.getStatusInfo().getStatusDetail() != ThingStatusDetail.BRIDGE_OFFLINE)
-                    .map(Thing::getHandler).filter(Objects::nonNull).map(CommonInterface.class::cast)
-                    .collect(Collectors.toList());
+                    .map(Thing::getHandler).filter(Objects::nonNull).map(CommonInterface.class::cast).toList();
         }
         return List.of();
     }
@@ -150,8 +148,7 @@ public interface CommonInterface {
     }
 
     default void setNewData(NAObject newData) {
-        if (newData instanceof NAThing) {
-            NAThing thingData = (NAThing) newData;
+        if (newData instanceof NAThing thingData) {
             if (getId().equals(thingData.getBridge())) {
                 getActiveChildren().stream().filter(child -> child.getId().equals(thingData.getId())).findFirst()
                         .ifPresent(child -> child.setNewData(thingData));
@@ -182,7 +179,7 @@ public interface CommonInterface {
             String channelName = channelUID.getIdWithoutGroup();
             getCapabilities().values().forEach(cap -> cap.handleCommand(channelName, command));
         } else {
-            getLogger().debug("Command {}, on channel {} dropped - thing is not ONLINE", command, channelUID);
+            getLogger().debug("Command {} on channel {} dropped - thing is not ONLINE", command, channelUID);
         }
     }
 
